# Physik

./: CMakeLists.txt  README.md
src/Colliders/: BoxCollider.cpp  BoxCollider.hpp  Collider.hpp  CollisionInfo.hpp  SphereCollider.cpp  SphereCollider.hpp
src/Collision/: BoxCollider.hpp  Collider.hpp  CollisionInfo.hpp  Contact.cpp  Contact.hpp  MeshContact.cpp  MeshContact.hpp
src/Collision/Collider/: BaseCollider.cpp  BaseCollider.hpp  ConvexHullCollider.cpp  ConvexHullCollider.hpp  ConvexHullColliderPolygonalize.cpp  ConvexTriangleMeshCollider.cpp  ConvexTriangleMeshCollider.hpp
src/Collision/Datatypes/: PolygonFace.cpp  PolygonFace.hpp
src/Collision/Datatypes/SeparatingAxis/: BaseSeparatingAxis.cpp  BaseSeparatingAxis.hpp  ConvexHullConvexHullSeparatingAxis.cpp  ConvexHullConvexHullSeparatingAxis.hpp
src/Engine/: Engine.cpp  Engine.hpp
src/Math/: LinAlg.cpp  LinAlg.hpp  Math.cpp  Math.hpp
src/Mesh/: Mesh.cpp  Mesh.hpp  PolygonMesh.cpp  PolygonMesh.hpp  TriangleMesh.cpp  TriangleMesh.hpp
src/Rigidbody/: Rigidbody.cpp  Rigidbody.hpp
src/Solver/: Solver.cpp  Solver.hpp
src/Solvers/: EulerSolver.cpp  EulerSolver.hpp  OdeSolver.hpp
src/World/: World.cpp  World.hpp
